--- a/recipe/nginx/motd.j2
+++ b/recipe/nginx/motd.j2
@@ -1,15 +1,15 @@
 
 
-
-                    ,
-                    |`-.__
-                    / ' _/
-                   ****`
-                  /    }
-                 /  \ /
-             \ /`   \\\
-             `\    /_\\
-               `~~~~~``~`
+       _________         .    .
+      (..       \_    ,  |\  /|
+       \       O  \  /|  \ \/ /
+        \______    \/ |   \  /
+           vvvv\    \ |   /  |
+           \^^^^  ==   \_/   |
+            `\_   ===    \.  |
+            / /\_   \ /      |
+            |/   \_  \|      /
+                   \________/
         <[--------------------]>
 
 Server is Managed by Oranda Ansible Tool
