--- a/recipe/nginx/motd.j2
+++ b/recipe/nginx/motd.j2
@@ -12,7 +12,7 @@
                    \________/
         <[--------------------]>
 
-Server is Managed by Floki Ansible Tool
+Server is Managed by Flook Ansible Tool
 
-* Link: https://github.com/Norwik/Floki
+* Link: https://github.com/Norwik/Flook
 * Version: {{ version }}
